[package]
name = "nosqlite"
version = "0.1.0"
edition = "2021"
authors = ["arkiralor <prithoo11335@gmail.com>"]
description = "A NoSQL database implemented in Rust."
license = "MIT"
repository = "https://www.github.com/arkiralor/nosqlite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0"
