[package]
name = "nosqlite"
version = "0.1.0"
edition = "2021"
authors = [
    "arkiralor <prithoo11335@gmail.com>",
    "Prithoo Medhi <prithoo11335@gmail.com>"
]
description = "A local NoSQL database implemented in Rust."
license = "MIT"
repository = "https://www.github.com/arkiralor/nosqlite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
